tests/Rules/Structure/Fixtures/invalid/iframe_no_title.html.twig
{# 1 errors #}
<iframe src="about:blank"></iframe>
